# makcu-py-lib

./: .gitignore  .readthedocs.yaml  .report.json  README.md  __init__.py  pyproject.toml  pytest.ini
docs/: advanced_features.rst  async_usage.rst  basic_usage.rst  changelog.rst  command_line.rst  conf.py  debugging.rst  examples.rst  getting_started.rst  index.rst  installation_guide.rst  performance_benchmarks.rst  requirements.txt
docs/api/: connection.rst  controller.rst  enums.rst  mouse.rst
makcu/: __init__.py  __main__.py  conftest.py  connection.py  controller.py  makcu.pyi  mouse.py  test_suite.py  utils.py
tests/: conftest.py  test_button_mask.py  test_capture_right_clicks.py  test_controller_behavior.py  test_device_info.py  test_firmware_version.py  test_get_button_states.py  test_get_raw_mask.py  test_is_button_pressed.py  test_lock_state.py  test_middle_click.py  test_port_connection.py  test_press_and_release.py  test_reset_all.py  test_set_fallback_port.py
