[project]
name = "makcu"
version = "0.1.0"
description = "Python library to interact with Makcu devices."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "SleepyTotem" }
]
license = { text = "GNU" }

[project.urls]
"Homepage" = "https://github.com/SleepyTotem/makcu-py-lib"

[tool.setuptools]
packages = ["makcu"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"